fix : overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html, body {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 :root {
